[tool.poetry]
name = "ray-broken-spaces"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
gymnasium = "~0.28"
ray = { extras = ["rllib"], version = "^2.23.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
